[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/objects/guide.png" type="Texture" id=1]
[ext_resource path="res://assets/art/dummylight.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Guide.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/font33_outline.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sounds/guide/blah.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/guide/ha.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 10 )

[node name="Guide" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 2

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 2 )
texture_scale = 0.4
energy = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="Text" type="RichTextLabel" parent="."]
visible = false
margin_left = -48.0
margin_top = -48.0
margin_right = 80.0
margin_bottom = 7.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]WAAH! .. It worked? Are you Oddly? Follow the path![/center]"
text = "WAAH! .. It worked? Are you Oddly? Follow the path!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 22 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SndHa" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "Sounds"

[node name="SndBlah" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
bus = "Sounds"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered" flags=3]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited" flags=3]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=3]
